Bug 1722188 - Don't call PushLayer for no-op nsDisplayOpacity items. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D121290